support IDEA 2023.2.6